Fix alignment of the issue header and the other headers.

--- a/ui/components/cr-issue.css
+++ b/ui/components/cr-issue.css
@@ -9,10 +9,6 @@ h2 {
     margin: 0.5em 16px;
 }
 
-.issue-subject {
-    padding: 0.5em 16px;
-}
-
 .issue-description {
     margin: 1em 16px;
 }
